src/components/Toast.css
.toast {
  outline: none;
  padding: 10px;
  margin: 5px 0px;
  color: white;
  display: flex;
  align-items: center;
  gap: 5px;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}
.success {
  background-color: #4caf50;
}
.info {
  background-color: #2196f3;
}
.warning {
  background-color: #ff9800;
}
.error {
  background-color: #f44336;
}

/* toast positioning  */

.toast-container {
  position: fixed;
  display: flex;
  align-items: flex-end;
}
.top {
  top: 10px;
  left: 50%;
  transform: translateX(-50%);
  flex-direction: column;
  align-items: center !important;
}
.top-right {
  top: 10px;
  right: 10px;
  flex-direction: column;
}
.top-left {
  top: 10px;
  left: 10px;
  align-items: flex-start !important;
  flex-direction: column;
}
.bottom {
  bottom: 10px;
  left: 50%;
  transform: translateX(-50%);
  flex-direction: column-reverse;
  align-items: center !important;
}
.bottom-right {
  bottom: 10px;
  right: 10px;
  flex-direction: column-reverse;
}
.bottom-left {
  bottom: 10px;
  left: 10px;
  align-items: flex-start !important;
  flex-direction: column-reverse;
}

/* toast positioning  */

.closeBtn {
  cursor: pointer;
  display: flex;
  align-items: center;
  background: none;
  border: none;
  padding: 0;
}

/* Animations  */

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes popUp {
  from {
    opacity: 0;
    transform: scale(0.5);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes slideIn {
  from {
    transform: translateY(100%);
  }
  to {
    transform: translateY(0);
  }
}

.fadeIn {
  animation: fadeIn 0.5s ease-in;
}

.popUp {
  animation: popUp 0.5s ease-out;
}

.slideIn {
  animation: slideIn 0.5s ease-out;
}

/* Animations  */

